--- a/WindowsFormsApp1/EncrypterPOC.csproj
+++ b/WindowsFormsApp1/EncrypterPOC.csproj
@@ -62,6 +62,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SpamForm1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SpamForm1.Designer.cs">
+      <DependentUpon>SpamForm1.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Encrypter.resx">
       <DependentUpon>Encrypter.cs</DependentUpon>
     </EmbeddedResource>
@@ -74,6 +80,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="SpamForm1.resx">
+      <DependentUpon>SpamForm1.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
